[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/ui_buttons/arrow.png" type="Texture" id=1]
[ext_resource path="res://ui/playing_ui.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="right_touch_button" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 320, 860 )
normal = ExtResource( 1 )

[node name="left_touch_button" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 320, 1060 )
rotation = 3.14159
normal = ExtResource( 1 )
[connection signal="pressed" from="CanvasLayer/right_touch_button" to="." method="_on_right_touch_button_pressed"]
[connection signal="released" from="CanvasLayer/right_touch_button" to="." method="_on_right_touch_button_released"]
[connection signal="pressed" from="CanvasLayer/left_touch_button" to="." method="_on_left_touch_button_pressed"]
[connection signal="released" from="CanvasLayer/left_touch_button" to="." method="_on_left_touch_button_released"]
